--- a/app/src/main/res/layout/custom_dailog.xml
+++ b/app/src/main/res/layout/custom_dailog.xml
@@ -6,6 +6,16 @@
     android:orientation="vertical">
 
     <ImageView
+        android:id="@+id/close"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_gravity="end"
+        android:layout_marginTop="7dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:src="@drawable/close" />
+
+    <ImageView
         android:id="@+id/responseImage"
         android:layout_width="match_parent"
         android:layout_height="180dp"
